--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8"> 
         <title>login| Order To cash</title>
+        <meta name="viewport" content="width=device-width, initial-scale=0.8">
     </head>
     <body>
         <iframe src="https://script.google.com/macros/s/AKfycbwAyprL90aUFlHWXIc-SyOTv9KbMCZ3QkrggknuiAsN_XZvnjDdrrWJRFngYotJOyZK/exec"
